<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lucky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/luckybingo"
            android:textColor="@color/main_btn_or_lucky"
            android:textSize="@dimen/activity_other_lucky"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lucky"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btn_getaward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lucky"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@id/btn_reset"
            android:background="@drawable/button"
            android:text="@string/getaward" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_cardnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_cardone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_white"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/cardone"
            android:textColor="@color/card_text_checked"
            android:textSize="@dimen/card" 
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/rb_cardtwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_white"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/cardtwo"
            android:textColor="@color/card_text_nomal"
            android:textSize="@dimen/card" 
             android:gravity="center"/>

        <RadioButton
            android:id="@+id/rb_cardthree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_white"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/cardthree"
            android:textColor="@color/card_text_nomal"
            android:textSize="@dimen/card"
             android:gravity="center" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_card_line_one"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@color/card_line_nomal" />

        <TextView
             android:id="@+id/tv_card_line_two"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@color/card_line_nomal" />

        <TextView
             android:id="@+id/tv_card_line_three"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@color/card_line_nomal" />
    </LinearLayout>
    
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </android.support.v4.view.ViewPager>

</LinearLayout>